# flowTO

./: .gitignore  .linear_backlog_plan.md  .pre-commit-config.yaml  HANDOFF-feedback-loop.md  Makefile  README.md  README_MODEL_SIMULATION.md  SUBMISSION.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-30T09-10-50-534Z.yml  page-2026-05-30T09-11-21-737Z.yml  page-2026-05-30T09-11-50-077Z.yml  page-2026-05-30T12-28-12-338Z.yml  page-2026-05-30T12-28-17-962Z.yml  page-2026-05-30T12-28-30-028Z.yml  page-2026-05-30T12-28-34-545Z.yml  page-2026-05-30T12-28-46-646Z.yml  page-2026-05-30T12-28-59-140Z.yml  page-2026-05-30T13-05-42-865Z.yml  page-2026-05-30T13-07-13-136Z.yml  page-2026-05-30T13-07-51-675Z.yml  page-2026-05-30T13-08-56-787Z.yml  page-2026-05-30T14-18-44-137Z.yml  page-2026-05-30T14-18-49-722Z.yml  page-2026-05-30T14-19-38-890Z.yml  page-2026-05-30T14-19-54-454Z.yml  page-2026-05-30T14-20-10-136Z.yml  page-2026-05-30T14-20-16-803Z.yml  page-2026-05-30T14-21-59-902Z.yml  page-2026-05-30T14-23-06-676Z.yml  page-2026-05-30T14-23-19-155Z.yml  page-2026-05-30T14-24-14-355Z.yml  page-2026-05-30T20-57-41-814Z.yml  page-2026-05-30T20-58-02-387Z.yml  page-2026-05-30T20-58-32-684Z.yml  page-2026-05-30T20-58-37-908Z.yml  page-2026-05-30T20-58-50-101Z.yml  page-2026-05-30T21-00-34-229Z.yml  page-2026-05-30T21-00-42-798Z.yml  page-2026-05-30T21-00-56-865Z.yml  page-2026-05-30T21-01-54-408Z.yml  page-2026-05-30T21-02-02-524Z.yml  page-2026-05-30T21-22-29-746Z.yml  page-2026-05-30T21-22-34-980Z.yml  page-2026-05-30T21-22-58-426Z.yml  page-2026-05-30T21-23-07-647Z.yml  page-2026-05-30T21-23-26-092Z.yml  page-2026-05-30T21-23-37-311Z.yml  page-2026-05-30T21-24-10-637Z.yml
artifacts/: flowto-architecture-guide.html  flowto-architecture.html
benchmarks/: .gitignore  README.md  _harness.py  bench_cudf_pandas.py  bench_gnn_labels.py  bench_ingest_tmc.py  bench_load_xy.py  bench_odme_counts.py  bench_synthetic_write.py  run_all.py  run_cudf_pandas.py  run_model_end_to_end.py
data/: README.md
data/bench/: README.md
data/dataset/: DATASET_README.md  build_dataset.py  clean_restrictions.py  dataset-creation.py  restriction_traffic_dataset.csv  restriction_traffic_dataset.parquet  restrictions_clean.csv  test.py  v3.csv
data/model/: training_dataset.csv  validation_dataset.csv
data/transit/: ttc_latest.json
demo/: RUNBOOK.md
demo/scenarios/: baseline.json  wc_fix.json  wc_surge.json
design/: README.md  flowto.html
design/css/: flowto.css
design/js/: app.js  data.js  map.js  tweaks.jsx  ui.js
docs/: 00-hackathon-brief.md  01-spark-inventory.md  02-architecture.md  03-data-sources.md  04-scope-and-mvp.md  05-demo-script.md  06-spark-setup-verified.md  07-training-feedback-loop.md  ARCHITECTURE.md  explainer.html  gnn-explainer.md  graph-model-and-api.md  ui-audit-2026-05-31.md
docs/specs/: 00-repo-and-environment.md  01-data-pipeline.md  02-graph.md  03-demand-and-od.md  04-simulation-engine.md  05-blast-radius.md  06-backend-api.md  07-frontend.md  08-transit-overlay.md  09-copilot-capabilities-routing.md  09-copilot-constraints-ux.md  09-copilot-implementation-todos.md  09-copilot-roadmap.md  09-copilot.md  10-optimizer.md  11-profiling-and-perf.md  12-demo-fifa-wc.md  13-feedback-loop.md  13-stage2-result.md  14-closure-dataset.md  15-assignment-realism.md  15-feedback-loop-perf.md  BUILD_STATUS.md  GOAL.md  HANDOFF-realdata.md  HANDOFF.md  LINEAR_MAP.md  ROADMAP-feedback-loop.md  ROADMAP.md  TESTING.md  VISUAL_TESTING.md
frontend/: .env.example  .gitignore  app.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/3d_models/: CN_Tower__1piece.glb  WorldCup_386.glb
frontend/src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
frontend/tests/: copilotRouting.test.ts  copilotStagedPlan.test.ts  dayStore.test.ts  decodeFrame.test.ts  mapViewToggle.test.ts  pressureRamp.test.ts  redesign.test.ts  search.test.ts  tickStore.test.ts  time.test.ts  transit.test.ts
infra/: README-spark.md
models/: demand_model.pkl  sweep_results.json
models/gnn/: README_GNN.md  __init__.py  (+13 more)
scripts/: bake_bylaws.py  bench_gpu_vs_scipy.py  build_restricted_roads.py  fetch_data.sh  gen_mock_edges.py  gnn_e2e_test.py  gpu_smoke.py  llm_debug.py  llm_smoke.py  precompute_baseline_day.py  profile_sim.py  requirements.txt  run_api.sh  run_frontend.sh  serve_demo_api.py  time_model_load.py  train_on_gx10.sh  train_overnight_gx10.sh  verify_day_fill.py  verify_model.py  verify_pathcache_scipy.py  verify_stranded.py
tests/: test_api_copilot.py  test_api_daystream.py  test_api_demo.py  test_api_restricted_roads.py  test_api_scenarios.py  test_bake_datasets.py  test_benchmark.py  test_blast_sim.py  test_blastradius.py  test_blastradius_parity.py  test_bpr.py  test_centreline_graph_build.py  test_centreline_loader.py  test_constraint_checker.py  test_context.py  test_copilot_agent.py  test_copilot_assess.py  test_copilot_classify.py  test_copilot_confirm.py  test_copilot_constraints.py  test_copilot_followups.py  test_copilot_plan.py  test_copilot_rag.py  test_copilot_resolve.py  test_copilot_stream.py  test_datapipeline.py  test_demand_surge.py  test_demo_scenarios.py  test_determinism.py  test_equilibrium_oracle.py  test_gate.py  test_graph_mutation.py  test_graph_schema.py  test_groundtruth_clean.py  test_groundtruth_confounders.py  test_groundtruth_counterfactual.py  test_groundtruth_labels.py  test_groundtruth_openings.py  test_groundtruth_package.py  test_groundtruth_spatial.py  (+24 more)
(+424 files in other folders)
