[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torontosim"
version = "0.1.0"
description = "TorontoSim — local-first 3-D Toronto traffic digital twin (DGX Spark)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "FlowTo" }]
dependencies = [
    "osmnx>=1.9",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist>=3.5", "ruff>=0.5", "black>=24.0", "pre-commit>=3.7", "httpx>=0.27"]
# Data pipeline (P01): fetch + bake to (Geo)Parquet + DuckDB catalog. CPU-safe,
# installable locally (kept light — WKT geometry via shapely, no geopandas).
data = ["requests>=2.31", "pyarrow>=15.0", "duckdb>=1.0", "shapely>=2.0"]
# Principled assignment oracle (CPU, installable locally).
sim = ["aequilibrae>=1.0"]
# Optional demand-model backend. The default CPU path falls back to the
# deterministic heuristic model when this backend cannot load.
model = ["xgboost>=2.0"]
# GPU acceleration — installed ONLY on the Spark, never locally.
gpu = ["cudf-cu13", "cugraph-cu13"]
# GraphSAGE demand/congestion model. torch + PyG; CPU build works locally, CUDA
# (aarch64/cu13) wheels used on the Spark for GPU training. The GNN demand path
# falls back to xgboost when these aren't installed, so the group is optional.
gnn = ["torch>=2.0", "torch-geometric>=2.5"]
# Local AI stack — Spark only.
ai = ["ollama>=0.3", "sentence-transformers>=3.0", "chromadb>=0.5"]
# Backend API.
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "websockets>=12.0", "pydantic>=2.0"]
# Real GTFS transit (P08): production accelerator for shape geometrization. The
# stdlib reader in transit.gtfs_reader keeps tests hermetic without this.
transit = ["gtfs_kit>=6.0"]
# Bylaw corpus bake (P09): extract Municipal Code PDFs -> corpus .md. A pre-event
# step only; the baked corpus is committed, so runtime never needs this.
bake = ["pypdf>=4.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["torontosim*"]

[tool.setuptools.package-data]
"torontosim.copilot" = ["corpus/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "spark: GPU/LLM tests that run only on the DGX Spark over SSH (skipped in CI)",
    "slow: longer-running tests (e.g. equilibrium oracle); run in full suite",
    "heavy: minutes-long full-fidelity tests (full-scale demo/sim assignment on the 81k-edge graph); excluded from the fast PR CI job (-m 'not heavy') and run in the nightly/main 'full' job. Mechanism covered fast on every PR via reduced-demand / small-graph tests.",
    "network: tests that hit the network (skipped in CI; run manually/Spark)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "data", "models", "frontend", "design"]

[tool.ruff.lint]
# Scoped to real-error + import-hygiene rules. Modernization (UP) and bugbear
# (B) rewrites are intentionally excluded so the P00 restructure does not alter
# Liron's baseline logic; they can be enabled in a later cleanup pass.
select = ["E", "F", "I", "W"]
# E402: deliberate sys.path bootstrap before imports in tests/scripts.
# E501: long lines in legacy modules are out of P00 scope.
ignore = ["E402", "E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "(\\.venv|data|models|frontend|design)"
